Correct submit button text colour, ensure text wraps inside div.

--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -23,7 +23,6 @@
 .top-menu li a:hover, 
 .top-menu li a:focus {
   background: #003459;
-  border: none;
   color: #007EA7;
 }
 
